<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/cardPollution"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card"

    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"

    >


    <TextView
        android:id="@+id/txtPollution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/cardGraphTitle"
        tools:ignore="MissingConstraints"

        android:text="@string/card1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytChoixGraphPollution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"

        style="@style/lytChoixGraph"

        app:layout_constraintBottom_toTopOf="@id/lytGraphPollution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPollution">

        <Button
            android:id="@+id/btnHourPollution"
            style="@style/txtButtonChoixGraph"
            android:layout_width="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"

            android:background="@drawable/button_choix_graph"
            android:text="@string/heure"
            app:layout_constraintEnd_toStartOf="@+id/btnDayPollution"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="2dp" />

        <Button
            android:id="@+id/btnDayPollution"
            style="@style/txtButtonChoixGraph"
            android:layout_width="0dp"
            android:background="@drawable/button_choix_graph"
            android:text="@string/jour"
            app:layout_constraintEnd_toStartOf="@+id/btnYearPollution"


            app:layout_constraintStart_toEndOf="@+id/btnHourPollution"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnYearPollution"
            style="@style/txtButtonChoixGraph"
            android:layout_width="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"

            android:background="@drawable/button_choix_graph"
            android:text="@string/annee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDayPollution"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="5dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytGraphPollution"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytChoixGraphPollution"

        android:layout_marginTop="5dp"
        android:background="@drawable/graph_background"
        >

        <TextView
            android:id="@+id/txtGraphUnitLeftPollution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"

            android:text="@string/pmEtUnit"
            style="@style/txtGraphUnit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/txtGraphTitrePollution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"

            android:text=""
            style="@style/txtTitreGraph"
            app:layout_constraintStart_toEndOf="@id/txtGraphUnitLeftPollution"
            app:layout_constraintEnd_toStartOf="@id/txtGraphUnitRightPollution"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtGraphUnitRightPollution"
            style="@style/txtGraphUnit"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"

            android:text="CO2 (ppm)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/graphPollution"

            app:layout_constraintTop_toBottomOf="@+id/txtGraphUnitLeftPollution"
            app:layout_constraintBottom_toTopOf="@id/chkPM1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            />
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkPM1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/graphPollution"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="60dp"


            android:text="PM1"
            app:buttonTint="@color/colorGraphPm1"
            style="@style/txtLegend"

            />
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkPM25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/graphPollution"
            app:layout_constraintStart_toEndOf="@+id/chkPM1"
            app:layout_constraintEnd_toStartOf="@+id/chkPM10"
            app:layout_constraintBottom_toBottomOf="parent"

            style="@style/txtLegend"
            android:text="PM2.5"
            app:buttonTint="@color/colorGraphPm25"

            />
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkPM10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/graphPollution"
            app:layout_constraintStart_toEndOf="@+id/chkPM25"
            app:layout_constraintEnd_toStartOf="@id/chkCO2"
            app:layout_constraintBottom_toBottomOf="parent"

            style="@style/txtLegend"
            android:text="PM10"
            app:buttonTint="@color/colorGraphPm10"

            />
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkCO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/graphPollution"
            app:layout_constraintStart_toEndOf="@+id/chkPM10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            style="@style/txtLegend"
            android:layout_marginRight="60dp"

            android:text="CO2"
            app:buttonTint="@color/colorGraphCo2"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>